Closed
Bug 1501533
Opened 6 years ago
Closed 6 years ago
Block WebRender on the GT218 (GeForce 210/205/310 etc.)
Categories
(Core :: Graphics: WebRender, defect, P1)
Core
Graphics: WebRender
Tracking
()
VERIFIED
FIXED
mozilla65
People
(Reporter: jrmuizel, Assigned: kats)
References
Details
Attachments
(1 file)
46 bytes,
text/x-phabricator-request
|
jcristau
:
approval-mozilla-release+
|
Details | Review |
These are very under powered GPUs. See: https://www.youtube.com/watch?v=kYDkJcD4rBM
WebRender doesn't work well enough on them yet to consider shipping. See bug 1501378.
For now, we'll block them on 64 and reconsider once we have picture caching.
Here's a list of GT218 device id's:
"GT218": [
"0a60",
"0a62",
"0a63",
"0a64",
"0a65",
"0a66",
"0a67",
"0a7b",
"10c0",
"10c3",
"10c5",
"10d8"
],
"GT218M": [
"0a68",
"0a69",
"0a6a",
"0a6c",
"0a6e",
"0a6f",
"0a70",
"0a71",
"0a72",
"0a73",
"0a74",
"0a75",
"0a76",
"0a7a"
],
"GT218GL": [
"0a78"
],
"GT218GLM": [
"0a7c"
]
Reporter | ||
Updated•6 years ago
|
Blocks: stage-wr-trains
Priority: -- → P1
Reporter | ||
Comment 1•6 years ago
|
||
GT218 is used in cards like the GeForce 210, GeForce 205, GeForce 310, some GeForce 405s etc.
Reporter | ||
Updated•6 years ago
|
Summary: Block WebRender on the GT218 → Block WebRender on the GT218 (GeForce 210/205/310 etc.)
Assignee | ||
Comment 3•6 years ago
|
||
Since bug 1498417 touches the same code I'm fixing up the patch on that and doing it together with this one.
Try push with both patches (not that try will really catch much in the way of functional errors for this...): https://treeherder.mozilla.org/#/jobs?repo=try&group_state=expanded&revision=0c3fafc770390e3b83ce12cb9d58a2d443b355b3
Depends on: 1498417
Assignee | ||
Comment 4•6 years ago
|
||
Depends on D9677
Pushed by kgupta@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/75f3767b6b43
Block a bunch of low-powered nvidia cards from getting WebRender. r=mattwoodrow
Comment 6•6 years ago
|
||
bugherder |
Status: NEW → RESOLVED
Closed: 6 years ago
status-firefox65:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla65
Reporter | ||
Comment 7•6 years ago
|
||
[Tracking Requested - why for this release]: We're considering doing a limited release of WebRender on 64. It would be really good to have this additional blocking there.
tracking-firefox64:
--- → ?
Reporter | ||
Comment 8•6 years ago
|
||
Comment on attachment 9019766 [details]
Bug 1501533 - Block a bunch of low-powered nvidia cards from getting WebRender. r?mattwoodrow
[Beta/Release Uplift Approval Request]
Feature/Bug causing the regression: None
User impact if declined: Users with low-powered nvidia cards will have WebRender enabled and it's not a very good experience there
Is this code covered by automated tests?: No
Has the fix been verified in Nightly?: Yes
Needs manual test from QE?: No
If yes, steps to reproduce:
List of other uplifts needed: None
Risk to taking this patch: Low
Why is the change risky/not risky? (and alternatives if risky): This is very low risk changes as it just adds some additional blocking of the WebRender feature.
String changes made/needed:
Attachment #9019766 -
Flags: approval-mozilla-beta?
Updated•6 years ago
|
Attachment #9019766 -
Flags: approval-mozilla-beta? → approval-mozilla-release?
Comment 10•6 years ago
|
||
Comment on attachment 9019766 [details]
Bug 1501533 - Block a bunch of low-powered nvidia cards from getting WebRender. r?mattwoodrow
blacklisting some devices for webrender, approved for 64.0 rc2
Attachment #9019766 -
Flags: approval-mozilla-release? → approval-mozilla-release+
Comment 11•6 years ago
|
||
Hi Jeff, how can we test this issue ? does this mean that We should not see WebRender on Windows 10 with Nvidia GeForce 210, even if we manually set the gfx.webrender.all in about:config ?
What are the steps to verify this issue ?
Flags: qe-verify+
Flags: needinfo?(jmuizelaar)
Updated•6 years ago
|
Flags: needinfo?(kats)
Assignee | ||
Comment 12•6 years ago
|
||
The pref to modify is gfx.webrender.all.qualified - and yes, if you have a GeForce 210 card on a desktop Windows 10 machine, then without this patch you should get WR enabled in about:support, and with this patch it should be disabled.
Flags: needinfo?(kats)
Flags: needinfo?(jmuizelaar)
Comment 13•6 years ago
|
||
bugherder uplift |
Comment 14•6 years ago
|
||
Hi, I can confirm this issue as FIXED in firefox BETA 65.0b2 and Nightly 65.0a1 (2018-12-10)on a WINDOWS 10 with an Nvidia GeForce 210, after setting the gfx.webrender.all.qualified to true in about config , the WebRender is no longer recognized and displayed in about:support. I will mark this issue accordingly.
Status: RESOLVED → VERIFIED
Flags: qe-verify+
You need to log in
before you can comment on or make changes to this bug.
Description
•