Bug 1501533 - Block a bunch of low-powered nvidia cards from getting WebRender. r=mattwoodrow a=jcristau

Depends on D9677

Differential Revision: https://phabricator.services.mozilla.com/D9678

--HG--
extra : source : 75f3767b6b4371e4901fd6d4f8d9714ecebe2757