widget/GfxDriverInfo.h
@@ -99,6 +99,7 @@ enum DeviceFamily {
   Bug1155608,
   Bug1207665,
   Bug1447141,
+  NvidiaBlockWebRender,
   DeviceFamilyMax
 };
 
